--- a/paginas/pedidos.phtml
+++ b/paginas/pedidos.phtml
@@ -15,7 +15,7 @@
         <div class="pedidos_flex">
         <?php foreach ($dadosApi as $pedido): ?>
             <div class="pedidos">
-                <div class="name"><img src="imagens/icone.png" alt="">
+                <div class="name"><img src="imagens/gata.png" alt="">
                     <P><?= htmlspecialchars($pedido->usuario->nome) ?></P>
                 </div>
                 <div class="info_pedidos">
