ajuste back-end

--- a/paginas/carrinho.phtml
+++ b/paginas/carrinho.phtml
@@ -21,10 +21,13 @@
         </div>
         <div class="conteiner_info_flex">
             <div class="conteiner_info1">
-
+                <h4>Resumo Da Compra</h4>
+                <hr>
+                <ul>
+                    <li><p> QUANTIDADE</p><p>01</p></li>
+                    <li><p> FRETE</p><p>GRÁTIS</p></li>
+                </ul>
             </div>
-            <div class="conteiner_cep"></div>
-
         </div>
     </div>
 
