--- a/css/style.css
+++ b/css/style.css
@@ -2951,6 +2951,40 @@ footer {
                 }
             }
         }
+
+        .conteiner_info {
+            width: 98%;
+            background-color: rgba(255, 255, 255, 0.2);
+            border: solid 1px white;
+            border-radius: 20px;
+
+            padding: 10px;
+            margin: 20px auto;
+
+            h4 {
+                font-size: 20px;
+                font-weight: bold;
+            }
+
+            hr {
+                background-color: white;
+                width: 100%;
+                height: 3px;
+                border-radius: 50px;
+                opacity: 100%;
+                margin-top: 0;
+            }
+            ul {
+                margin: 0;
+                padding: 0;
+
+                li {
+                    display: flex;
+                    justify-content: space-between;
+
+                }
+            }
+        }
     }
 }
 
@@ -2965,6 +2999,11 @@ footer {
 }
 
 @media (min-width: 600px) {
+
+    #main_carrinho {
+        width: 500px;
+    }
+
     #conteiner_carrosel {
         .carousel {
             .carousel-cell {
