--- a/paginas/carrinho.phtml
+++ b/paginas/carrinho.phtml
@@ -19,15 +19,14 @@
                 </div>
             </div>
         </div>
-        <div class="conteiner_info_flex">
-            <div class="conteiner_info1">
-                <h4>Resumo Da Compra</h4>
+        <div class="conteiner_info">
+            
+                <h4>Resumo da Compra</h4>
                 <hr>
                 <ul>
-                    <li><p> QUANTIDADE</p><p>01</p></li>
-                    <li><p> FRETE</p><p>GRÁTIS</p></li>
+                    <li><p><strong>QUANTIDADE</strong></p><p>01</p></li>
+                    <li><p><strong>FRETE</strong></p><p>GRÁTIS</p></li>
                 </ul>
-            </div>
         </div>
     </div>
 
