--- a/paginas/carrinho.phtml
+++ b/paginas/carrinho.phtml
@@ -24,8 +24,11 @@
                 <h4>Resumo da Compra</h4>
                 <hr>
                 <ul>
-                    <li><p><strong>QUANTIDADE</strong></p><p>01</p></li>
-                    <li><p><strong>FRETE</strong></p><p>GRÁTIS</p></li>
+                    <li><p><strong>Quantidade</strong></p><p>01</p></li>
+                    <li><p><strong>Frete</strong></p><p>GRÁTIS</p></li>
+                    <li><p><strong>Valor</strong></p><p>R$45.567,00</p></li>
+                    <hr>
+                    <li><p style="margin-bottom: 0;"><strong>Valor Total</strong></p><p style="margin-bottom: 0;">R$45.567,00</p></li>
                 </ul>
         </div>
     </div>
