--- a/paginas/redefinirSenha.phtml
+++ b/paginas/redefinirSenha.phtml
@@ -18,4 +18,4 @@
     </div>
 </section>                                                                                              
 
-<script src="paginas/validacoes/senha/put_senha.js"></script> 
+<script src="JS/alterSenha"></script>
