--- a/paginas/pedidos.phtml
+++ b/paginas/pedidos.phtml
@@ -20,9 +20,11 @@
                 </div>
                 <div class="info_pedidos">
                     <ul>
-                        <li><strong>Quantidade: </strong>01 Produtos</li>
+                        <li><strong>Id do Item: </strong> <?= htmlspecialchars($pedido->itemPedidos[0]->item->id_item) ?></li>
+                        <!-- </li><li><strong>Nome</strong> <?= htmlspecialchars($pedido->itemPedidos[0]->item->atributo_2) ?></li> -->
                         <li><strong>Valor Total:</strong> R$ <?= number_format($pedido->valor, 2, ',', '.') ?></li>
-                        <li><strong>Estagio da Compra:</strong> <?= htmlspecialchars($pedido->status) ?></li>
+                        <li><strong>Estagio da Compra:</strong> <?= htmlspecialchars($pedido->status) ?>
+                        
                     </ul>
                 </div>
                 <div class="dropdown">
