--- a/paginas/pedidos.phtml
+++ b/paginas/pedidos.phtml
@@ -21,7 +21,7 @@
                 <div class="info_pedidos">
                     <ul>
                         <li><strong>Id do Item: </strong> <?= htmlspecialchars($pedido->itemPedidos[0]->item->id_item) ?></li>
-                        </li><li><strong>Nome</strong> <?= htmlspecialchars($pedido->itemPedidos[0]->item->atributo_2) ?></li>
+                        <li id="paragrafo"><?= htmlspecialchars($pedido->itemPedidos[0]->item->atributo_2) ?></li>
                         <li><strong>Valor Total:</strong> R$ <?= number_format($pedido->valor, 2, ',', '.') ?></li>
                         <li><strong>Estagio da Compra:</strong> <?= htmlspecialchars($pedido->status) ?>
                         
@@ -57,3 +57,14 @@
 </section>
 
 <script src="JS/pedido.js"></script>
+
+<script>
+    const paragraphs = document.querySelectorAll('#paragrafo');
+
+    paragraphs.forEach(paragraph => {
+        let text = paragraph.innerHTML;
+        let words = text.split(' ');
+        words[0] = '<strong>' + words[0] + '</strong>';
+        paragraph.innerHTML = words.join(' ');
+    });
+</script>
