--- a/paginas/redefinirSenha.phtml
+++ b/paginas/redefinirSenha.phtml
@@ -18,4 +18,4 @@
     </div>
 </section>                                                                                              
 
-<script src="JS/alterSenha"></script>
+<script src="JS/alterSenha.js"></script>
