--- a/paginas/admin.phtml
+++ b/paginas/admin.phtml
@@ -153,7 +153,7 @@ foreach ($dadosApi as $produto) {
                                 <form class="descricao">
 
 
-                                    <input type=" number" name="idProdutoDelete" placeholder="ID do Produto" value="<?= htmlspecialchars($produto->id_item) ?>" hidden required>
+                                    <input type=" number" name="idProdutoDelete" placeholder="ID do Produto"  hidden required>
 
                                     <p class="desc"><?= htmlspecialchars($produto->nome) ?></p>
                                     <p class="preco">R$ <?= number_format($produto->preco, 2, ',', '.') ?></p>
@@ -184,4 +184,4 @@ foreach ($dadosApi as $produto) {
 
 <script src="paginas/validacoes/item/post_item.js"></script>
 <script src="paginas/validacoes/item/put_item.js"></script>
-<script src="paginas/validacoes/item/delete_item.js"></script>
+<script src="JS/delete_item.js"></script>
